[package]
name = "contract-addresses-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
tokio = { version = "1.37.0", features = ["full"] }
alloy = { version = "0.5.0", features = ["full"] }
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.100"
